[package]
name = "xandeum-protos"
description = "Xandeum Protos"
documentation = "---------"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
prost-build = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]